accentext color fixes contrast ratio issue with accent fg text

--- a/src/styles/history.scss
+++ b/src/styles/history.scss
@@ -87,7 +87,7 @@ img {
 
 .js-ag-active .ag-timeline-card_point {
     color: var(--color-lvl);
-    background-color: var(--color-accent);
+    background-color: var(--color-accentext);
 }
 
 .ag-timeline-card_meta-box {
@@ -98,7 +98,7 @@ img {
     margin: .5em 0 0;
     font-weight: bold;
     font-size: 1.5em;
-    color: var(--color-accent);
+    color: var(--color-accentext);
 }
 
 .ag-timeline-card_item {
@@ -169,7 +169,7 @@ img {
     margin-bottom: .5lh;
     font-weight: bold;
     font-size: 1.5em;
-    color: var(--color-accent);
+    color: var(--color-accentext);
 }
 
 .ag-timeline-card_desc {
