--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -40,7 +40,7 @@ section, article {
             @include util.absolute-fill;
 
             div {
-                background-color: rgba(var(--color-lvl-rgb), calc(2/3));
+                background-color: rgb(from var(--color-lvl-rgb) r g b / calc(2/3));
                 height: fit-content;
 
                 > * {
